[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-medication-dosing-env"
version = "1.0.0"
description = "Two-compartment pharmacokinetic medication dosing environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core] @ git+https://github.com/meta-pytorch/OpenEnv.git@v0.2.3",
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.24.0",
    "requests>=2.31.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
server = "medication_dosing_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["medication_dosing_env", "medication_dosing_env.server"]
package-dir = { "medication_dosing_env" = ".", "medication_dosing_env.server" = "server" }
